<resources>
    <string name="app_name">CREATIVE CAKE</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="todo">Todo</string>
    <string name="usuario">Usuario</string>
    <string name="ofertas">Ofertas</string>
    <string name="pedido">Pedido</string>
    <string name="carrito">Carrito</string>
    <string name="cotizaci_n">Cotización</string>
    <string name="cat_logo">Catálogo</string>
    <string name="txtCotiAñadido">Especificaciones adicionales sobre tu pedido</string>
    <string name="txtCotiBoton">Enviar cotización</string>
    <string name="cu_l_es_tu_presupuesto">¿Cuánto pagarás por tu pedido?</string>
    <string name="revisar_cotizaci_n">Revisar Cotización</string>
    <string name="nombre_de_la_cotizac_n">Nombre de la Cotización</string>
    <string name="btn_agregar">Agregar al carrito</string>
    <string name="btn_cancelar">Cancelar</string>
    <string-array name="tamaño">
        <item>Tamaño</item>
        <item>5 porciones</item>
        <item>15 porciones</item>
        <item>25 porciones</item>
        <item>35 porciones</item>
        <item>2 pisos</item>
        <item>3 pisos</item>
    </string-array>
    <string name="cobertura">Cobertura:</string>
    <string name="sabor">Sabor:</string>
    <string name="decoracion">Decoracion:</string>
    <string name="txtInvenTitulo">Inventario</string>
    <string name="txtInvenVisualizar">Ver Inventario</string>
    <string name="txtInvenAgregar">Agregar productos</string>
    <string name="txtPCompletadoTitulo">Pedidos Completados</string>
    <string name="txtPCompletado">Tus pedidos completados son: </string>
    <string name="txtPCompletadoCantidad">0</string>
    <string name="registro">Registro</string>
    <string name="t_usuario">Tipo de usuario</string>
    <string name="cliente">Cliente</string>
    <string name="tienda">Negocio</string>
    <string name="domicilio">Domiciliario</string>
    <string name="next">Siguiente</string>
    <string name="nombre_cliente">Nombre</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="edad">Edad</string>
    <string name="back">Volver</string>
    <string name="nombreNegocio">Nombre del negocio</string>
    <string name="cuenta">Cuenta de nequi</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="estI">Imagen estadística</string>
    <string name="gan">Ganancias</string>
    <string name="acum">Acumulado:</string>
    <string name="inicia_sesi_n_cliente">Inicia como cliente</string>
    <string name="inicia_sesi_n_domiciliario">Inicia como domiciliario</string>
    <string name="inicia_sesi_n_negocio">Inicia como negocio</string>
    <string name="inicia_sesi_n_desarrollador">Inicia como desarrollador</string>
    <string name="reg_strate">Regístrate</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="menu_cat">TODO</string>
    <string name="buscar">TODO</string>
    <string name="men_provisional">Menú Provisional</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_inicio_tienda">Inicio_tienda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="codigo_de_pedido">codigo de pedido :</string>
    <string name="comprador">comprador :</string>
    <string name="pedido_activo">PEDIDO ACTIVO </string>
    <string name="informacion_de_pedido2">Informacion de pedido :</string>
    <string name="seguimiento">SEGUIMIENTO...</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="estado_de_pedido">ESTADO DE PEDIDO</string>
    <string name="informacon_de_pedido">Informacion de pedido :</string>
    <string name="precio_m_ximo">Ingrese el precio máximo</string>
    <string name="torta">Tortas</string>
    <string name="postre">Postres</string>
    <string name="hojaldre">Hojaldres</string>
    <string name="otro">Otros</string>
    <string name="_oferta">Oferta</string>
    <string name="_tip_producto">Tipo de Producto</string>
    <string name="calle_76b_87_95">Calle 76B #87-95</string>
    <string name="especificaciones">Especificaciones</string>
    <string name="especificaciones_aqu">Especificaciones aquí</string>
    <string name="comprar">Comprar</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="subtotal">Subtotal =</string>
    <string name="_40000">subtotal</string>
    <string name="comisi_n_5">Comisión (5%) =</string>
    <string name="_2000">comision</string>
    <string name="descuento">Descuento =</string>
    <string name="_0">descuento</string>
    <string name="por_favor_consigna_el_valor_total_de_la_compra_con_los_datos_dispuestos_abajo_cuando_lo_hayas_realizado_da_click_en_siguiente_para_confirmar_el_pago">Por favor consigna el valor total de la compra con los datos dispuestos abajo. Cuando lo hayas realizado da click en siguiente para confirmar el pago.</string>
    <string name="total">TOTAL =</string>
    <string name="_42000">total</string>
    <string name="siguiente">siguiente</string>
    <string name="c_digo_recaudo_20200714">Código Recaudo: 20200714</string>
    <string name="no_cuenta_013_77060_9">No. Cuenta: 013 - 77060 - 9</string>
    <string name="banco_banco_davivienda">Banco: Banco Davivienda</string>
    <string name="nombre_creative_cake_pagos">Nombre: Creative Cake Pagos</string>
    <string name="gracias_por_la_espera_estamos_verificando_tu_pago">Gracias por la espera. Estamos verificando tu pago.</string>
    <string name="a_ocurrido_un_error_con_tu_pago">Ha ocurrido un error con tu pago</string>
    <string name="por_favor_verifica_que_hayas_efectuado_correctamente_el_pago">Por favor verifica que hayas efectuado correctamente el pago</string>
    <string name="volver_al_carrito">Volver al carrito</string>
    <string name="verificar">Verificar</string>
    <string name="cancelar">cancelar</string>
    <string name="tienes_0_productos">Total Productos</string>
    <string name="pago_aceptado">Pago Aceptado</string>
    <string name="tu_pedido_est_en_camino">Tu Pedido está en camino</string>
    <string name="fin">Fin</string>
    <string name="c_digo">Código:</string>
    <string name="_12345">12345</string>
    <string name="domiciliario">Domiciliario:</string>
    <string name="maria_chaparro">Maria Chaparro</string>
    <string name="respuesta_cotizaci_n">Respuesta Cotización</string>
    <string name="estado">ESTADO ...</string>
    <string name="tu_inventario">Tu Inventario</string>
    <string name="no_oferta">No Oferta</string>
    <string name="ver">Ver</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="agregar">Agregar</string>
    <string name="precio_producto">Precio Producto</string>
    <string name="pasteleria_producto">Pasteleria Producto</string>
    <string name="total_items">1</string>
    <string name="cantidad">Cantidad</string>
    <string name="descripci_n_del_nuevo_producto">Descripción del nuevo producto</string>
    <string-array name="Tipo_producto">
        <item>Torta</item>
        <item>Postre</item>
        <item>Hojaldre</item>
        <item>Otro</item>
    </string-array>
    <string name="botonModificar">Modificar</string>
    <string name="filtrar">Filtrar</string>
    <string name="mostrar">mostrar</string>
    <string name="deseas_eliminar_este_producto_del_inventario">¿Deseas eliminar este producto del Inventario?</string>
    <string name="descargar_factura">Descargar Factura</string>
    <string name="key_del_pago_en_el_carrito_del_usuario">Key del pago en el carrito del usuario</string>
    <string name="volver">volver</string>
    <string name="aceptarPago">ACEPTAR</string>
    <string name="cerrar_sss">Cerrar sesión</string>
    <string name="para_cu_ndo_necesitas_tu_pedido">¿Para cuándo necesitas tu pedido?</string>
    <string name="para_qu_hora_lo_necesitas">¿Para qué hora lo necesitas?</string>
    <string name="revisa_tus_ventas_junto_con_las_solicitudes_de_cotizaci_n">Revisa tus ventas junto con las solicitudes de cotización</string>
    <string name="inventario">Inventario</string>
    <string name="podras_ver_a_adir_editar_y_eliminar_productos_de_tu_inventario">Podras ver, añadir, editar y eliminar productos de tu inventario</string>
    <string name="ventas">Ventas</string>
    <string name="pedidos_por_entregar">Pedidos por Entregar</string>
    <string name="atrapa_cotizaciones">Atrapa Cotizaciones</string>
    <string name="muy_pronto_llegar_el_domiciliario_a_recoger_los_siguientes_productos_que_han_comprado_tus_clientes">¡Muy pronto llegará el domiciliario a recoger los siguientes productos que han comprado tus clientes!</string>
    <string name="revisa_tu_cuenta_bancaria_ya_hemos_consignado_el_valor_de_estos_productos">Revisa tu cuenta bancaria. Ya hemos consignado el valor de estos productos.</string>
    <string name="nombre_de_la_cotizaci_n">Nombre de la Cotización</string>
    <string name="nombre_del_cliente_que_cotiza">Nombre del cliente que Cotiza</string>
    <string name="celular_del_cliente">Celular del Cliente</string>
    <string name="requerido_para">Requerido para:</string>
    <string name="hora_del_pedido">Hora del Pedido</string>
    <string name="fecha_del_pedido">Fecha del Pedido</string>
    <string name="denegarPago">DENEGAR</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="numeroPedido">Número de pedido</string>
    <string name="ya_estregaste_este_pedido">¿Ya estregaste este pedido?</string>
    <string name="s">Sí</string>
    <string name="no">No</string>
    <string name="tama_o">Tamaño:</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="pagar">Pagaré :</string>
    <string name="lo_necesito_para_la_siguiente_fecha_y_hora">Lo necesito para la siguiente fecha y hora:</string>
    <string name="estar_atent_a_tu_llamada_para_cuadrar_cualquier_detalle">Estaré atent@ a tu llamada para cuadrar cualquier detalle:</string>
    <string name="aceptar">Aceptar</string>
    <string name="puedes_cumplir_con_todas_las_especificaciones_de_esta_cotizaci_n_en_el_tiempo_requerido">¿Puedes cumplir con todas las especificaciones de esta cotización en el tiempo requerido?</string>
    <string name="espacio" />
    <string name="administraci_n">Administración</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="direeci_n">Direeción:</string>
    <string name="tienda___">Tienda:</string>
    <string name="cotizaiones_en_proceso">Cotizaciones en Proceso</string>
    <string name="nombre_cli">Nombre Cliente</string>
    <string name="en_progreso">En Progreso</string>
</resources>