<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BF5A7F"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainAdministrador">

    <TextView
        android:id="@+id/textView44"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/administraci_n"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/noPedidoAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/nombre_cliente"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/numeroAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="122dp"
            android:layout_height="47dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/aceptarPago" />

        <Button
            android:id="@+id/btnDenegar"
            android:layout_width="122dp"
            android:layout_height="47dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/denegarPago" />
    </LinearLayout>

    <Button
        android:id="@+id/button14"
        android:layout_width="348dp"
        android:layout_height="43dp"
        android:background="@drawable/button_rounded"
        android:text="@string/cerrarSesion" />

</LinearLayout>