<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagen_producto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center|top"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/wallet" />

    <Button
        android:id="@+id/botonSiguiente"
        android:layout_width="326dp"
        android:layout_height="40dp"
        android:background="@color/colorSecondary"
        android:text="@string/ventas"
        android:textColor="#F2F2F2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="343dp"
        android:layout_height="102dp"
        android:layout_marginTop="8dp"
        android:text="@string/revisa_tus_ventas_junto_con_las_solicitudes_de_cotizaci_n"
        android:textAlignment="center"
        android:textColor="#F2F2F2"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/clipboard" />

    <Button
        android:id="@+id/button"
        android:layout_width="326dp"
        android:layout_height="40dp"
        android:background="@color/colorSecondary"
        android:text="@string/inventario"
        android:textColor="#F2F2F2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="398dp"
        android:layout_height="87dp"
        android:layout_marginTop="8dp"
        android:text="@string/podras_ver_a_adir_editar_y_eliminar_productos_de_tu_inventario"
        android:textAlignment="center"
        android:textColor="#F2F2F2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/redondez_botones"
        android:text="@string/cerrar_sss"
        android:textColor="@color/colorSecondary" />

</LinearLayout>