<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@drawable/roundedframe"
    android:backgroundTint="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center"
        android:text="@string/deseas_eliminar_este_producto_del_inventario"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_pro"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_del_producto"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text_pre"
        android:layout_width="246dp"
        android:layout_height="33dp"
        android:text="@string/precio_producto"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/eliminar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="21dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/btn_cancelar"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>