<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".FinCompraClienteFragment">

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="261dp"
        android:background="#BF5A7F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view4"
        android:layout_width="413dp"
        android:layout_height="106dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="m" />

    <ImageButton
        android:id="@+id/opciones"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="58dp"
        android:layout_height="43dp"
        android:background="@drawable/ic_baseline_menu_24"
        android:contentDescription="@string/todo"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="35dp"
        android:text="@string/finalizar_compra"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TableLayout
        android:layout_width="280dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="129dp"
                android:layout_height="match_parent"
                android:text="@string/subtotal"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtotal_compra"
                android:layout_width="147dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:hapticFeedbackEnabled="false"
                android:text="@string/_40000"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descuento"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descuento_total_compra"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/_0"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="RtlCompat" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="129dp"
                android:layout_height="29dp"
                android:gravity="bottom"
                android:text="@string/comisi_n_5"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/comision_total_compra"
                android:layout_width="100dp"
                android:layout_height="29dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/_2000"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:ignore="RtlCompat" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="125dp"
                android:layout_height="62dp"
                android:gravity="bottom"
                android:text="@string/total"
                android:textColor="#FFFFFF"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_compra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/_42000"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="28sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="362dp"
        android:layout_height="275dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:text="@string/por_favor_consigna_el_valor_total_de_la_compra_con_los_datos_dispuestos_abajo_cuando_lo_hayas_realizado_da_click_en_siguiente_para_confirmar_el_pago"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/nombre_creative_cake_pagos"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/banco_banco_davivienda"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/no_cuenta_013_77060_9"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/c_digo_recaudo_20200714"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button10"
        android:layout_width="177dp"
        android:layout_height="58dp"
        android:background="@drawable/redondez_botones_daniel"
        android:text="@string/siguiente"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>